# DuplicateRemover

./: CMakeLists.txt  CODEBASE_DOCUMENTATION.md  INSTALL_OPENSSL.md  Makefile  README.md
include/: duplicate_handler.h  file_scanner.h  hash_calculator.h  utils.h
src/: duplicate_handler.cpp  duplicate_handler.h  file_scanner.cpp  file_scanner.h  hash_calculator.cpp  main.cpp
test_files/: README.md  TEST_SUMMARY.md  data.csv  file with spaces.txt  run_tests.bat  test_script.sh  unique_file_1.txt  unique_file_2.txt
test_files/nested/deep/: large_file_copy.txt
test_files/subdirectory/: config_backup.json  duplicate_text_2.txt
